# opengov-cli

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
metadata/: kusama_coretime.scale  kusama_encointer.scale  kusama_people.scale  polkadot_asset_hub.scale  polkadot_bridge_hub.scale  polkadot_collectives.scale  polkadot_coretime.scale  polkadot_people.scale
src/: batch_ah.rs  build_upgrade.rs  chopsticks.rs  functions.rs  main.rs  primitives.rs  register_system_para.rs  scaffold_tests.rs  submit_referendum.rs  test_referendum.rs  tests.rs  types.rs  xcm_force_register.rs  xcm_force_reserve.rs
