[package]
name = "opengov-cli"
version = "0.1.0"
edition = "2021"
authors = ["joepetrowski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.6.9"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
subxt = "0.34.0"
hex = "0.4.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.18", features = ["derive", "cargo"] }
reqwest = "0.11.24"
